--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>problem will never last</title>
+    <style>
+        img{
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
 
     <h2>kono somossa i somossa na josdi tumi bose na thako</h2>
+    <img src="images/coconut.jpg" alt="">
+    <img src="images/grandma.jpg" alt="">
+
     
 </body>
 </html>
